auto gen api doc

--- a/autogen_api/keyboard_input.html
+++ b/autogen_api/keyboard_input.html
@@ -45,8 +45,7 @@ def color_adjust(key_input):
     This function allows the user to randomly adjust the color
     &#34;&#34;&#34;
     if key_input == &#34;c&#34;:
-        color = 3
-        # set color as color.rgb(randint(0,255), randint(0,255),randint(0,255))
+        color = color.rgb(randint(0,255), randint(0,255),randint(0,255))
         return color</code></pre>
 </details>
 </section>
